<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_a_comment"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_basic_edit_text"
            android:gravity="top"
            android:hint="@string/comment_placeholder"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="8"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/submit_comment_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_red_light"
            android:fontFamily="@font/amiko"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>