<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/comment_holder"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:background="@drawable/border_basic">

    <ImageView
        android:id="@+id/comment_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:src="@color/splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/short_placeholder"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/comment_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/comment_rating"
        android:textSize="10sp"
        app:layout_constraintLeft_toRightOf="@id/comment_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:maxWidth="275dp"
        android:maxLines="3"
        android:text="@string/text_placeholder"
        app:layout_constraintLeft_toRightOf="@id/comment_image"
        app:layout_constraintTop_toBottomOf="@id/comment_user" />

</androidx.constraintlayout.widget.ConstraintLayout>